* logger: fix charset of lines displayed in backlog when terminal charset is
  different from UTF-8 (bug #36379)
* logger: add colors for backlog lines and end of backlog, new options:
  logger.color.backlog_line and logger.color.backlog_end (task #11966)
* perl: fix compilation on OS X (bug #30701)
* perl: fix crash on quit on OS X
* relay: fix crash on /upgrade when client is connected using WeeChat protocol
* relay: redirect some irc messages from clients to hide output (messages: mode,
  ison, list, names, topic, who, whois, whowas, time, userhost) (bug #33516)
* relay: add "date_printed" and "highlight" in signal "_buffer_line_added"
  (WeeChat protocol)
* rmodifier: add default rmodifier "quote_pass" to hide password in command
  "/quote pass" (bug #36250)
* rmodifier: add default rmodifier "server" to hide passwords in commands
  /server and /connect (task #11993)
* rmodifier: add option "release" in default rmodifier "nickserv" (used to hide
  passwords in command "/msg nickserv") (bug #35705)
* tcl: add missing function "hdata_char" in API
* tcl: fix pointer sent to function hook_signal_send when type of data is
  a pointer

Version 0.3.7 (2012-02-26)
--------------------------

* core: add japanese translations
* core: fix expand of path `~` to home of user in function string_expand_home
  (`~/xxx` was ok, but not `~`)
* core: fix memory leak when closing buffer
* core: fix memory leak in function util_search_full_lib_name
* core: automatically add newline char after last pasted line (when pasting many
  lines with confirmation) (task #10703)
* core: fix bug with layout: assign layout number in buffers when doing
  /layout save
* core: do not auto add space after nick completer if option
  weechat.completion.nick_add_space is off
* core: fix signal "buffer_switch": send it only once when switching buffer
  (bug #31158)
* core: move option "scroll_unread" from command /input to /window