@@ -424,58 +424,80 @@ There are two different identifiers ('id'):
 
 WeeChat reserved identifiers:
 
-[width="100%",cols="5m,5,3,15",options="header"]
+[width="100%",cols="5m,5,3,10,8",options="header"]
 |=====================================================
 | Identifier               | Description             | Hdata type | Hdata content
+| Recommended action in client
 
 | _buffer_opened           | Buffer opened           | buffer |
   'number' (integer), 'full_name' (string), 'short_name' (string), +
   'nicklist' (integer), 'title' (string), 'local_variables' (hashtable), +
-  'prev_buffer' (pointer), 'next_buffer' (pointer)
+  'prev_buffer' (pointer), 'next_buffer' (pointer) |
+  Open buffer
 
 | _buffer_type_changed     | Type of buffer changed  | buffer |
   'number' (integer), 'full_name' (string), +
-  'type' (integer)
+  'type' (integer) |
+  Change type of buffer
 
 | _buffer_moved            | Buffer moved            | buffer |
   'number' (integer), 'full_name' (string), +
-  'prev_buffer' (pointer), 'next_buffer' (pointer)
+  'prev_buffer' (pointer), 'next_buffer' (pointer) |
+  Move buffer
 
 | _buffer_merged           | Buffer merged           | buffer |
   'number' (integer), 'full_name' (string), +
-  'prev_buffer' (pointer), 'next_buffer' (pointer)
+  'prev_buffer' (pointer), 'next_buffer' (pointer) |
+  Merge buffer
 
 | _buffer_unmerged         | Buffer unmerged         | buffer |
   'number' (integer), 'full_name' (string), +
-  'prev_buffer' (pointer), 'next_buffer' (pointer)
+  'prev_buffer' (pointer), 'next_buffer' (pointer) |
+  Unmerge buffer
 
 | _buffer_renamed          | Buffer renamed          | buffer |
   'number' (integer), 'full_name' (string), 'short_name' (string),
-  'local_variables' (hashtable)
+  'local_variables' (hashtable) |
+  Rename buffer
 
 | _buffer_title_changed    | Title of buffer changed | buffer |
-  'number' (integer), 'full_name' (string), 'title' (string)
+  'number' (integer), 'full_name' (string), 'title' (string) |
+  Change title of buffer
 
 | _buffer_localvar_added   | Local variable added    | buffer |
-  'number' (integer), 'full_name' (string), 'local_variables' (hashtable)
+  'number' (integer), 'full_name' (string), 'local_variables' (hashtable) |
+  Add local variable in buffer
 
 | _buffer_localvar_changed | Local variable changed  | buffer |
-  'number' (integer), 'full_name' (string), 'local_variables' (hashtable)
+  'number' (integer), 'full_name' (string), 'local_variables' (hashtable) |
+  Change local variable inbuffer
 
 | _buffer_localvar_removed | Local variable removed  | buffer |
-  'number' (integer), 'full_name' (string), 'local_variables' (hashtable)
+  'number' (integer), 'full_name' (string), 'local_variables' (hashtable) |
+  Remove local variable from buffer
 
 | _buffer_line_added       | Line added in buffer    | line |
   'buffer' (pointer), 'date' (time), 'date_printed' (time), 'displayed' (char),
-  'highlight' (char), 'prefix' (string), 'message' (string)
+  'highlight' (char), 'prefix' (string), 'message' (string) |
+  Display line in buffer
 
 | _buffer_closing          | Buffer closing          | buffer |
-  'number' (integer), 'full_name' (string)
+  'number' (integer), 'full_name' (string) |
+  Close buffer
 
 | _nicklist                | Nicklist for a buffer   | nicklist_item |
   'group' (char), 'visible' (char), 'level' (integer), +
   'name' (string), 'color' (string), +
-  'prefix' (string), 'prefix_color' (string)
+  'prefix' (string), 'prefix_color' (string) |
+  Update nicklist
+
+| _upgrade                 | WeeChat is upgrading    | (empty) |
+  (empty) |
+  Desync from WeeChat (send command 'desync')
+
+| _upgrade_ended           | Upgrade of WeeChat done | (empty) |
+  (empty) |
+  Resync with WeeChat (resend all commands sent on startup after the 'init')
 |=====================================================
 
 [[message_objects]]
